# climage

./: .gitignore  CMakeLists.txt  README.md
src/: Image.cpp  Image.h  Pixel.cpp  Pixel.h  TermImage.cpp  TermImage.h  Terminal.cpp  Terminal.h  main.cpp
src/Images/: BMP.cpp  BMP.h
